# harmcheck-pt-br

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
datasets/: prejudice_en_ptbr_sample.json
docs/: llama_study.md  references.bib
scripts/: study_llama.py
src/ethic_ai/: analyze.py  config.py  datasets.py  jsonl.py  judge.py  main.py  runner.py  schemas.py
src/harmcheck/: analyze.py  config.py  datasets.py  judge.py  main.py  runner.py  schemas.py
