[project]
name = "ethic-ai"
version = "0.1.0"
description = "Compare harm dataset outputs across local LLMs"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "orjson>=3.10",
    "httpx>=0.28",
    "typer>=0.15",
]

[project.scripts]
ethic = "ethic_ai.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ethic_ai"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
