[project]
name = "harmcheck"
version = "0.1.0"
description = "Compare PT-BR harm-prompt responses across local LLMs (DADA-pt-br)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "orjson>=3.10",
    "httpx>=0.28",
    "typer>=0.15",
]

[project.scripts]
harmcheck = "harmcheck.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harmcheck"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
